Fix dropdown menu in collapsed state

--- a/less/etalab/navbars.less
+++ b/less/etalab/navbars.less
@@ -555,8 +555,15 @@
         }
     }
 
-    .dropdown-menu {
-        margin-top: -1px;
+
+    .dropdown {
+        .dropdown-menu {
+            margin-top: -1px;
+        }
+
+        &.open .dropdown-menu {
+            display: inline;
+        }
     }
 }
 
